add formation page content

--- a/formations/gestion-de-projet.html
+++ b/formations/gestion-de-projet.html
@@ -32,11 +32,11 @@ layout: default
                     <p>Etudiants</p>
                 </div>
                 <div>
-                    <img src="/images/formation/student.png" alt="équipiers">
+                    <img src="/images/formation/teammembers.png" alt="équipiers">
                     <p>Membres d'équipe projet</p>
                 </div>
                 <div>
-                    <img src="/images/formation/student.png" alt="chefs de projets">
+                    <img src="/images/formation/project-manager.png" alt="chefs de projets">
                     <p>Chefs de projet</p>
                 </div>
             </div>
@@ -83,24 +83,62 @@ layout: default
     <secton class="formation_goals container">
         <h3>Objectifs pédagogiques</h3>
         <div>
-            <article>
-                <p><strong>Cibler</strong> les enjeux, phases et rôles d'unprojet informatique</p>
-                <p><strong>Recueillir</strong> le besoin auprès des utilisateurs</p>
-                <p><strong>Analyser</strong> le besoin</p>
-                <p><strong>Concevoir</strong> la solution</p>
-                <p><strong>Réaliser</strong> et valider la solution</p>
-                <p><strong>Livrer</strong> la solution en production</p>
-            </article>
-            <article>
-                <p><strong></strong></p>
-            </article>
-            <article>
-                <p></p>
-            </article>
-            <article>
-                <p></p>
-            </article>
+            <div>
+                <article>
+                    <p><strong>Cibler</strong> les enjeux, phases et rôles d'unprojet informatique</p>
+                    <p><strong>Recueillir</strong> le besoin auprès des utilisateurs</p>
+                    <p><strong>Analyser</strong> le besoin</p>
+                    <p><strong>Concevoir</strong> la solution</p>
+                    <p><strong>Réaliser</strong> et valider la solution</p>
+                    <p><strong>Livrer</strong> la solution en production</p>
+                </article>
+                <article>
+                    <p><strong>Produire</strong> une analyse de risques</p>
+                    <p><strong>Etablir</strong> un planning</p>
+                    <p><strong>Calculer</strong> un budget</p>
+                </article>
+            </div>
+            <div>
+                <article>
+                    <p><strong>Découvrir</strong> les différentes méthodes degestion de projet informatique</p>
+                    <p><strong>Evaluer</strong> les méthodes de gestion de projetinformatique en fonction du type de projet</p>
+                </article>
+                <article>
+                    <p><strong>Mener</strong> à bien un projet de développementd'un outil(développement d'une maquetteuniquement)</p>
+                    <p><strong>Présenter</strong> son projet</p>
+                </article>
+            </div>
         </div>
     </secton>
+    <section class="formation_methods">
+        <div class="container">
+            <h3>Modalités & Méthodes</h3>
+            <p>
+                La formation se passe en mode <strong>présentiel</strong> (face à face), distanciel sur demande pour certains modules. <br>
+                La formation alterne <strong>théorie</strong> et <strong>pratique</strong> (mises en situation, activités en groupes, débats). <br>
+                L'accent est mis sur <strong>la pratique en groupe</strong>.
+            </p>
+            <p>
+                L'<strong>évaluation</strong> (formative) est réalisée en <strong>continue</strong> sur les modules 1, 2 & 3 et matérialisée par une <strong>soutenance</strong> sur le module 4.
+            </p>
+            <p>
+                Un <strong>support de cours</strong> sera remis à chaque participant. <br>
+                Une feuille d’<strong>émargement</strong> par demi-journée de présence est fournie en fin de formation ainsi qu’une attestation de fin de formation si le stagiaire a bien assisté à la totalité de lasession. <br>
+                Un <strong>questionnaire</strong> de <strong>feedback</strong> est également proposé en fin de module.
+            </p>
+        </div>
+    </section>
+    <section class="formation_program container">
+        <h3>Le programme</h3>
+        <article>
+            <h4>Module <spans>1</spans></h4>
+            <div>
+                <h5>Jour 1</h5>
+                <ul>
+                    <li></li>
+                </ul>
+            </div>
+        </article>
+    </section>
 
 </div>
