add branch formtion

--- a/index.html
+++ b/index.html
@@ -146,24 +146,27 @@ permalink: '/'
         <h2>Formations</h2>
         <div>
             <article>
+                <i class="las la-compass"></i>
                 <h3>Gestion de projet</h3>
-                <p>pour membres d'équipe, chefs de projet & étudiants</p>
-                <p class="time">5 jours</p>
+                <p>membres d'équipe, chefs de projet & étudiants</p>
+                <p class="time">7,5 jours</p>
                 <a href="/formations/gestion-de-projet.html" class="btn">En savoir plus</a>
             </article>
 
-            <article>
-                <p>D'autres formations à venir</p>
+            <article class="formation_message">
+                <p>D'autres formations à venir <br><i class="las la-ellipsis-h"></i></p>
             </article>
             <!--<article>
+                <i class="las la-laptop-code"></i>
                 <h3>Outils numériques</h3>
-                <p>pour membres d'équipe, chefs de projet & étudiants</p>
+                <p>membres d'équipe, chefs de projet & étudiants</p>
                 <p class="time">5 jours</p>
                 <a href="#" class="btn">En savoir plus</a>
             </article>
             <article>
+                <i class="las la-fast-forward"></i>
                 <h3>Efficacité</h3>
-                <p>pour membres d'équipe, chefs de projet & étudiants</p>
+                <p>membres d'équipe & chefs de projet</p>
                 <p class="time">5 jours</p>
                 <a href="#" class="btn">En savoir plus</a>
             </article> -->
