update lp formation section

--- a/index.html
+++ b/index.html
@@ -146,30 +146,37 @@ permalink: '/'
         <h2>Formations</h2>
         <div>
             <article>
-                <i class="las la-compass"></i>
-                <h3>Gestion de projet</h3>
-                <p>membres d'équipe, chefs de projet & étudiants</p>
+                <h3 class="condensed-text">Gestion de projet</h3>
+                <p class="condensed-text"><small>Les fondamentaux de la gestion de projet informatique</small></p>
                 <p class="time">7,5 jours</p>
-                <a href="/formations/gestion-de-projet.html" class="btn">En savoir plus</a>
+                <p><small>4 modules</small></p>
+                <div>
+                    <a href="/formations/gestion-de-projet.html" class="btn">En savoir plus</a>
+                </div>
+                <p>Gérer un projet informatique de bout en bout au sein d'une entreprise</p>
             </article>
-
-            <article class="formation_message">
-                <p>D'autres formations à venir <br><i class="las la-ellipsis-h"></i></p>
+            <article class="coming-soon">
+                <h3 class="condensed-text">Mise en place d'améliorations</h3>
+                <p class="condensed-text"><small>La conduite de réunions <br> Les retours d'expérience / lessons learnt</small></p>
+                <p class="time">1 jour</p>
+                <p><small>par thème</small></p>
+                <div>
+                    <p><i>Coming soon</i></p>
+<!--                    <a href="#" class="btn">En savoir plus</a>-->
+                </div>
+                <p>Mettre en place des améliorations pour être plus efficace dans mon quotidien professionnel</p>
             </article>
-            <!--<article>
-                <i class="las la-laptop-code"></i>
-                <h3>Outils numériques</h3>
-                <p>membres d'équipe, chefs de projet & étudiants</p>
-                <p class="time">5 jours</p>
-                <a href="#" class="btn">En savoir plus</a>
+            <article class="coming-soon">
+                <h3 class="condensed-text">Prise en main de l'outil informatique</h3>
+                <p class="condensed-text"><small>Utiliser la suite Google ou Office 365 dans le context professionnel</small></p>
+                <p class="time">1 jour</p>
+                <p><small>adaptable en fonction du niveau requis</small></p>
+                <div>
+                    <p><i>Coming soon</i></p>
+<!--                    <a href="#" class="btn">En savoir plus</a>-->
+                </div>
+                <p>Maîtriser les outils numériques de bureautique dans le milieu professionnel</p>
             </article>
-            <article>
-                <i class="las la-fast-forward"></i>
-                <h3>Efficacité</h3>
-                <p>membres d'équipe & chefs de projet</p>
-                <p class="time">5 jours</p>
-                <a href="#" class="btn">En savoir plus</a>
-            </article> -->
         </div>
     </div>
 </section>
