complete formation content

--- a/formations/gestion-de-projet.html
+++ b/formations/gestion-de-projet.html
@@ -80,7 +80,7 @@ layout: default
             </div>
         </div>
     </section>
-    <secton class="formation_goals container">
+    <section class="formation_goals container">
         <h3>Objectifs pédagogiques</h3>
         <div>
             <div>
@@ -109,7 +109,7 @@ layout: default
                 </article>
             </div>
         </div>
-    </secton>
+    </section>
     <section class="formation_methods">
         <div class="container">
             <h3>Modalités & Méthodes</h3>
@@ -135,7 +135,93 @@ layout: default
             <div>
                 <h5>Jour 1</h5>
                 <ul>
-                    <li></li>
+                    <li>Qu'est-ce qu'un projet ?</li>
+                    <li>Qualité - Coût - Délai</li>
+                    <li>Les acteurs</li>
+                    <li>Les acteurs</li>
+                    <li>Les livrables</li>
+                    <li>Les enjeux</li>
+                </ul>
+            </div>
+            <div>
+                <h5>Jour 2</h5>
+                <ul>
+                    <li>Les enjeux du recueil du besoin utilisateur</li>
+                    <li>Les outils de recueil du besoin</li>
+                    <li>A quoi sert l'analyse du besoin</li>
+                    <li>Les acteurs de cette phase</li>
+                    <li>Le cahier des charges</li>
+                </ul>
+            </div>
+            <div>
+                <h5>Jour 3</h5>
+                <ul>
+                    <li>Définition de la conception</li>
+                    <li>Les outils et méthodes</li>
+                    <li>La réalisation production de valeur</li>
+                    <li>Les activités liées à la phase de réalisation</li>
+                    <li>Les activités & enjeux de la phase de validation</li>
+                    <li>Les acteurs de la validation</li>
+                </ul>
+            </div>
+            <div>
+                <h5>Jour 4</h5>
+                <ul>
+                    <li>Qu'est-ce que la production et ses contraintes ?</li>
+                    <li>La mise en production</li>
+                    <li>Le support et la maintenance</li>
+                </ul>
+            </div>
+        </article>
+        <article>
+            <h4>Module <spans>2</spans></h4>
+            <div>
+                <h5>Jour 1</h5>
+                <ul>
+                    <li>Qu'est-ce qu'un risque ?</li>
+                    <li>L'analyse et un suivi de risques</li>
+                    <li>La planification de projet</li>
+                </ul>
+            </div>
+            <div>
+                <h5>Jour 2</h5>
+                <ul>
+                    <li>Les éléments de coût d'un projet informatique</li>
+                    <li>La construction et le suivi d'un budget</li>
+                </ul>
+            </div>
+        </article>
+        <article>
+            <h4>Module <spans>3</spans></h4>
+            <div>
+                <h5>Jour 1</h5>
+                <ul>
+                    <li>Les différentes méthodes de gestion de projet</li>
+                    <li>Zoom sur les méthodes Agile et Cascade</li>
+                    <li>Le choix de la méthode de projet</li>
+                </ul>
+            </div>
+        </article>
+        <article>
+            <h4>Module <spans>4</spans></h4>
+            <div>
+                <h5>Jour 1</h5>
+                <ul>
+                    <li>Recueil et analyse du besoin</li>
+                    <li>Choix de la méthode de gestion de projet</li>
+                    <li>Conception</li>
+                    <li>Réalisation (maquette uniquement) et plan de validation
+                        de la solution</li>
+                    <li>Plan de mise en production</li>
+                    <li>Analyse de risques</li>
+                    <li>Macro planning</li>
+                    <li>Budget</li>
+                </ul>
+            </div>
+            <div>
+                <h5>Jour 2</h5>
+                <ul>
+                    <li>Soutenance</li>
                 </ul>
             </div>
         </article>
