--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@ permalink: '/'
                 <p class="time">1 jour</p>
                 <p><small>par thème</small></p>
                 <div>
-                    <p><i>Coming soon</i></p>
+                    <p><i><b>Coming soon</b></i></p>
 <!--                    <a href="#" class="btn">En savoir plus</a>-->
                 </div>
                 <p>Mettre en place des améliorations pour être plus efficace dans mon quotidien professionnel</p>
@@ -172,7 +172,7 @@ permalink: '/'
                 <p class="time">1 jour</p>
                 <p><small>adaptable en fonction du niveau requis</small></p>
                 <div>
-                    <p><i>Coming soon</i></p>
+                    <p><i><b>Coming soon</b></i></p>
 <!--                    <a href="#" class="btn">En savoir plus</a>-->
                 </div>
                 <p>Maîtriser les outils numériques de bureautique dans le milieu professionnel</p>
