style gestion de projet page from intro to modules sections

--- a/formations/gestion-de-projet.html
+++ b/formations/gestion-de-projet.html
@@ -11,11 +11,14 @@ layout: default
     <section class="formation_numbers container">
         <article class="formation_numbers_stat">
             <img src="/images/formation/80pourcents.PNG" alt="graph 80%">
-            <p>80%</p>
+            <p class="formation_numbers_stat_number">80%</p>
             <p>De mise en pratique</p>
         </article>
         <article class="formation_numbers_day">
-            <p>7,5 jours</p>
+            <p>
+                7,5 <br>
+                jours
+            </p>
         </article> 
         <article class="formation_numbers_people">
             <img src="/images/formation/green-mens.png" alt="10 personnes">
@@ -25,7 +28,7 @@ layout: default
     </section>
     <section class="formation_target">
         <div class="container">
-            <h3>Public cible</h3>
+            <h3 class="colored-title">Public cible</h3>
             <div>
                 <div>
                     <img src="/images/formation/student.png" alt="étudiants">
@@ -51,31 +54,31 @@ layout: default
     </section>
     <section class="formation_modules">
         <div class="container">
-            <h3>4 modules</h3>
+            <h3 class="colored-title">4 modules</h3>
             <div>
                 <article>
                     <span>1</span>
                     <p>Maîtriser les fondamentaux de la gestion de projet informatique</p>
-                    <p>3,5 jours</p>
-                    <p>2100 € HT</p>
+                    <p class="formation_modules_time">3,5 jours</p>
+                    <p class="formation_modules_price">2100 € HT</p>
                 </article>
                 <article>
                     <span>2</span>
                     <p>Maîtriser les activités transverses de la gestion de projet informatique</p>
-                    <p>1,5 jours</p>
-                    <p>900 € HT</p>
+                    <p class="formation_modules_time">1,5 jours</p>
+                    <p class="formation_modules_price">900 € HT</p>
                 </article>
                 <article>
                     <span>3</span>
                     <p>Choisir une méthode de gestion de projet informatique</p>
-                    <p>1 jour</p>
-                    <p>600 € HT</p>
+                    <p class="formation_modules_time">1 jour</p>
+                    <p class="formation_modules_price">600 € HT</p>
                 </article>
                 <article>
                     <span>4</span>
                     <p>Mener à bien un projet informatique de bout en bout</p>
-                    <p>1,5 jours</p>
-                    <p>900 € HT</p>
+                    <p class="formation_modules_time">1,5 jours</p>
+                    <p class="formation_modules_price">900 € HT</p>
                 </article>
             </div>
         </div>
@@ -112,7 +115,7 @@ layout: default
     </section>
     <section class="formation_methods">
         <div class="container">
-            <h3>Modalités & Méthodes</h3>
+            <h3 class="colored-title">Modalités & Méthodes</h3>
             <p>
                 La formation se passe en mode <strong>présentiel</strong> (face à face), distanciel sur demande pour certains modules. <br>
                 La formation alterne <strong>théorie</strong> et <strong>pratique</strong> (mises en situation, activités en groupes, débats). <br>
