style gestion de projet page from modules to methods sections

--- a/formations/gestion-de-projet.html
+++ b/formations/gestion-de-projet.html
@@ -85,7 +85,7 @@ layout: default
     </section>
     <section class="formation_goals container">
         <h3>Objectifs pédagogiques</h3>
-        <div>
+        <div class="formation_goals_grid">
             <div>
                 <article>
                     <p><strong>Cibler</strong> les enjeux, phases et rôles d'unprojet informatique</p>
