finish formation page style (computer)

--- a/formations/gestion-de-projet.html
+++ b/formations/gestion-de-projet.html
@@ -26,6 +26,10 @@ layout: default
             <p>Entre 10 et 15 personnes</p>
         </article>
     </section>
+    <section class="formation_links container">
+        <a href="#nextDates">Prochaines dates</a>
+        <a href="mailto:valerie@a2consulting.io?subject=Formation à la gestion de projet" target="_blank">S'incrire</a>
+    </section>
     <section class="formation_target">
         <div class="container">
             <h3 class="colored-title">Public cible</h3>
@@ -134,7 +138,7 @@ layout: default
     <section class="formation_program container">
         <h3>Le programme</h3>
         <article>
-            <h4>Module <spans>1</spans></h4>
+            <h4>Module <span>1</span></h4>
             <div>
                 <h5>Jour 1</h5>
                 <ul>
@@ -177,7 +181,7 @@ layout: default
             </div>
         </article>
         <article>
-            <h4>Module <spans>2</spans></h4>
+            <h4>Module <span>2</span></h4>
             <div>
                 <h5>Jour 1</h5>
                 <ul>
@@ -195,7 +199,7 @@ layout: default
             </div>
         </article>
         <article>
-            <h4>Module <spans>3</spans></h4>
+            <h4>Module <span>3</span></h4>
             <div>
                 <h5>Jour 1</h5>
                 <ul>
@@ -206,7 +210,7 @@ layout: default
             </div>
         </article>
         <article>
-            <h4>Module <spans>4</spans></h4>
+            <h4>Module <span>4</span></h4>
             <div>
                 <h5>Jour 1</h5>
                 <ul>
@@ -228,6 +232,31 @@ layout: default
                 </ul>
             </div>
         </article>
+    </section>
+    <section class="formation_dates">
+        <div id="nextDates" class="anchor"></div>
+        <div class="container">
+            <h3 class="colored-title">Propositions de dates</h3>
+            <div class="formation_dates_bloc">
+                <div>
+                    <p>Dates à venir</p>
+                    <!--<ul>
+                        <li>Session du 11 juin 2021 au 3 juillet 2021</li>
+                        <li>Session du 04 septembre 2021 au 26 septembre 2021</li>
+                    </ul>-->
+                    <div>
+                        <img src="/images/formation/Calendar.png" class="formation_target_image">
+                    </div>
+                </div>
+                <div class="formation_links container">
+                    <a href="mailto:valerie@a2consulting.io?subject=Informations : formation à la gestion de projet">Avoir plus d'informations</a>
+                    <a href="mailto:valerie@a2consulting.io?subject=Inscription : formation à la gestion de projet" target="_blank">S'incrire</a>
+                </div>
+            </div>
+        </div>
+        <div class="btnBloc container">
+            <a href="/index.html" class="postBtn btn">Retour</a>
+        </div>
     </section>
 
 </div>
