--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ permalink: '/'
         <div class="btn-group">
             <a href="#more" class="btn btn-black roboto-text">Voir plus</a>
             <a href="#offers" class="btn roboto-text">Accompagnements</a>
-            <!-- <a href="#formation" class="btn roboto-text">Formations</a> -->
+            <a href="#formation_anchor" class="btn roboto-text">Formations</a>
             <a href="#blog" class="btn roboto-text">Blog</a>
         </div>
     </div>
@@ -142,6 +142,7 @@ permalink: '/'
 </section>
 
 <section id="formation">
+    <div id="formation_anchor" class="anchor"></div>
     <div class="container">
         <h2>Formations</h2>
         <div>
