--- a/_posts/2021-03-11-Team-Leader.html
+++ b/_posts/2021-03-11-Team-Leader.html
@@ -22,7 +22,7 @@ excerpt_separator: <!--more-->
 
     S’assurer que l’équipe est en” bonne santé”, en tant que groupe mais aussi chaque individu, est primordial. Une bonne pratique est de créer l’espace nécessaire pour partager sur le sujet quotidiennement (quelques minutes suffisent, ce n’est pas une perte de temps !). <br/>
 
-    J’aime le faire en stand up chaque jour, mais ce n’est pas toujours possible. Des alternatives en ligne existent, ma préférée est <a href="https://www.teammood.com/fr/">TeamMood</a> (#placementproduit). <br/>
+    J’aime le faire en stand up chaque jour, mais ce n’est pas toujours possible. Des alternatives en ligne existent, ma préférée est <a href="https://www.teammood.com/fr/" target="_blank">TeamMood</a> (#placementproduit). <br/>
 
     Créer un environnement bienveillant, où chaque membre peut exprimer ses émotions, poser des questions sans peur, échanger sur ses difficultés. Cela crée de la confiance, une bonne ambiance et cela favorise l’entraide, l’organisation de la journée et accroît la communication au sein du groupe. Inutile de travailler sur le livrable le plus complexe si l’on a passé une nuit blanche. Moins de pression pour la
     personne concernée qui sera d’autant plus motivée le lendemain quand elle ira mieux.
@@ -39,7 +39,7 @@ excerpt_separator: <!--more-->
 <h3>Laisser le temps à l’équipe de se construire</h3>
 <p>
     Une équipe n’est pas une somme d’individus, elle a son identité propre, elle vit au rythme des interactions entre ses membres. <br/>
-    Elle a besoin de temps pour se construire, elle va passer par les 4 phases décrites par la théorie de Tuckman, “Forming”, “Storming”, “Norming”, “Performing” (pour plus de détails <a href="https://blog.trello.com/fr/modele-de-tuckman">Le modèle de Tuckman et les 4 étapes pour améliorer la productivité de vos équipes</a>).
+    Elle a besoin de temps pour se construire, elle va passer par les 4 phases décrites par la théorie de Tuckman, “Forming”, “Storming”, “Norming”, “Performing” (pour plus de détails <a href="https://blog.trello.com/fr/modele-de-tuckman"  target="_blank">Le modèle de Tuckman et les 4 étapes pour améliorer la productivité de vos équipes</a>).
 </p>
 
 <img src="/images/posts/article1/FSNP.PNG" alt="théorie de Tuckman : Forming, Storming, Norming, Performing" class="postImage">
@@ -69,5 +69,5 @@ excerpt_separator: <!--more-->
 </p>
 
 <p class="credits">
-    Photo by <a href="https://unsplash.com/@jessedo81?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">jesse orrico</a> on <a href="https://unsplash.com/">Unsplash</a>
+    Photo by <a href="https://unsplash.com/@jessedo81?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText" target="_blank">jesse orrico</a> on <a href="https://unsplash.com/"  target="_blank">Unsplash</a>
 </p>
