--- a/formations/gestion-de-projet.html
+++ b/formations/gestion-de-projet.html
@@ -138,98 +138,130 @@ layout: default
     <section class="formation_program container">
         <h3>Le programme</h3>
         <article>
-            <h4>Module <span>1</span></h4>
             <div>
-                <h5>Jour 1</h5>
-                <ul>
-                    <li>Qu'est-ce qu'un projet ?</li>
-                    <li>Qualité - Coût - Délai</li>
-                    <li>Les acteurs</li>
-                    <li>Les acteurs</li>
-                    <li>Les livrables</li>
-                    <li>Les enjeux</li>
-                </ul>
+                <h4>Module <span>1</span></h4>
+                <div>
+                    <img src="/images/formation/arrow-down.png" alt="flèche vers le bas" class="arrow-down">
+                    <img src="/images/formation/arrow-up.png" alt="flèche vers le haut" class="arrow-up">
+                </div>
             </div>
-            <div>
-                <h5>Jour 2</h5>
-                <ul>
-                    <li>Les enjeux du recueil du besoin utilisateur</li>
-                    <li>Les outils de recueil du besoin</li>
-                    <li>A quoi sert l'analyse du besoin</li>
-                    <li>Les acteurs de cette phase</li>
-                    <li>Le cahier des charges</li>
-                </ul>
-            </div>
-            <div>
-                <h5>Jour 3</h5>
-                <ul>
-                    <li>Définition de la conception</li>
-                    <li>Les outils et méthodes</li>
-                    <li>La réalisation production de valeur</li>
-                    <li>Les activités liées à la phase de réalisation</li>
-                    <li>Les activités & enjeux de la phase de validation</li>
-                    <li>Les acteurs de la validation</li>
-                </ul>
-            </div>
-            <div>
-                <h5>Jour 4</h5>
-                <ul>
-                    <li>Qu'est-ce que la production et ses contraintes ?</li>
-                    <li>La mise en production</li>
-                    <li>Le support et la maintenance</li>
-                </ul>
-            </div>
-        </article>
-        <article>
-            <h4>Module <span>2</span></h4>
-            <div>
-                <h5>Jour 1</h5>
-                <ul>
-                    <li>Qu'est-ce qu'un risque ?</li>
-                    <li>L'analyse et un suivi de risques</li>
-                    <li>La planification de projet</li>
-                </ul>
-            </div>
-            <div>
-                <h5>Jour 2</h5>
-                <ul>
-                    <li>Les éléments de coût d'un projet informatique</li>
-                    <li>La construction et le suivi d'un budget</li>
-                </ul>
+            <div class="program_module">
+                <div>
+                    <h5>Jour 1</h5>
+                    <ul>
+                        <li>Qu'est-ce qu'un projet ?</li>
+                        <li>Qualité - Coût - Délai</li>
+                        <li>Les acteurs</li>
+                        <li>Les acteurs</li>
+                        <li>Les livrables</li>
+                        <li>Les enjeux</li>
+                    </ul>
+                 </div>
+                <div>
+                    <h5>Jour 2</h5>
+                    <ul>
+                        <li>Les enjeux du recueil du besoin utilisateur</li>
+                        <li>Les outils de recueil du besoin</li>
+                        <li>A quoi sert l'analyse du besoin</li>
+                        <li>Les acteurs de cette phase</li>
+                        <li>Le cahier des charges</li>
+                    </ul>
+                </div>
+                <div>
+                    <h5>Jour 3</h5>
+                    <ul>
+                        <li>Définition de la conception</li>
+                        <li>Les outils et méthodes</li>
+                        <li>La réalisation production de valeur</li>
+                        <li>Les activités liées à la phase de réalisation</li>
+                        <li>Les activités & enjeux de la phase de validation</li>
+                        <li>Les acteurs de la validation</li>
+                    </ul>
+                </div>
+                <div>
+                    <h5>Jour 4</h5>
+                    <ul>
+                        <li>Qu'est-ce que la production et ses contraintes ?</li>
+                        <li>La mise en production</li>
+                        <li>Le support et la maintenance</li>
+                    </ul>
+                </div>
             </div>
         </article>
         <article>
-            <h4>Module <span>3</span></h4>
             <div>
-                <h5>Jour 1</h5>
-                <ul>
-                    <li>Les différentes méthodes de gestion de projet</li>
-                    <li>Zoom sur les méthodes Agile et Cascade</li>
-                    <li>Le choix de la méthode de projet</li>
-                </ul>
+                <h4>Module <span>2</span></h4>
+                <div>
+                    <img src="/images/formation/arrow-down.png" alt="flèche vers le bas" class="arrow-down">
+                    <img src="/images/formation/arrow-up.png" alt="flèche vers le haut" class="arrow-up">
+                </div>
+            </div>
+            <div class="program_module">
+                <div>
+                    <h5>Jour 1</h5>
+                    <ul>
+                        <li>Qu'est-ce qu'un risque ?</li>
+                        <li>L'analyse et un suivi de risques</li>
+                        <li>La planification de projet</li>
+                    </ul>
+                </div>
+                <div>
+                    <h5>Jour 2</h5>
+                    <ul>
+                        <li>Les éléments de coût d'un projet informatique</li>
+                        <li>La construction et le suivi d'un budget</li>
+                    </ul>
+                </div>
             </div>
         </article>
         <article>
-            <h4>Module <span>4</span></h4>
             <div>
-                <h5>Jour 1</h5>
-                <ul>
-                    <li>Recueil et analyse du besoin</li>
-                    <li>Choix de la méthode de gestion de projet</li>
-                    <li>Conception</li>
-                    <li>Réalisation (maquette uniquement) et plan de validation
-                        de la solution</li>
-                    <li>Plan de mise en production</li>
-                    <li>Analyse de risques</li>
-                    <li>Macro planning</li>
-                    <li>Budget</li>
-                </ul>
+                <h4>Module <span>3</span></h4>
+                <div>
+                    <img src="/images/formation/arrow-down.png" alt="flèche vers le bas" class="arrow-down">
+                    <img src="/images/formation/arrow-up.png" alt="flèche vers le haut" class="arrow-up">
+                </div>
             </div>
+            <div class="program_module">
+                <div>
+                    <h5>Jour 1</h5>
+                    <ul>
+                        <li>Les différentes méthodes de gestion de projet</li>
+                        <li>Zoom sur les méthodes Agile et Cascade</li>
+                        <li>Le choix de la méthode de projet</li>
+                    </ul>
+                </div>
+            </div>
+        </article>
+        <article>
             <div>
-                <h5>Jour 2</h5>
-                <ul>
-                    <li>Soutenance</li>
-                </ul>
+                <h4>Module <span>4</span></h4>
+                <div>
+                    <img src="/images/formation/arrow-down.png" alt="flèche vers le bas" class="arrow-down">
+                    <img src="/images/formation/arrow-up.png" alt="flèche vers le haut" class="arrow-up">
+                </div>
+            </div>
+            <div class="program_module">
+                <div>
+                    <h5>Jour 1</h5>
+                    <ul>
+                        <li>Recueil et analyse du besoin</li>
+                        <li>Choix de la méthode de gestion de projet</li>
+                        <li>Conception</li>
+                        <li>Réalisation (maquette uniquement) et plan de validation
+                            de la solution</li>
+                        <li>Plan de mise en production</li>
+                        <li>Analyse de risques</li>
+                        <li>Macro planning</li>
+                        <li>Budget</li>
+                    </ul>
+                </div>
+                <div>
+                    <h5>Jour 2</h5>
+                    <ul>
+                        <li>Soutenance</li>
+                    </ul>
+                </div>
             </div>
         </article>
     </section>
@@ -258,5 +290,27 @@ layout: default
             <a href="/index.html" class="postBtn btn">Retour</a>
         </div>
     </section>
-
 </div>
+
+
+<script>
+    let arrowsUp = document.querySelectorAll(".arrow-up");
+    let arrowsDown = document.querySelectorAll(".arrow-down");
+    let program_modules = document.querySelectorAll(".program_module");
+
+    arrowsUp.forEach(function(arrow, index){
+        arrow.addEventListener("click", function(){
+            program_modules[index].style.display = "none";
+            arrowsUp[index].style.display = "none";
+            arrowsDown[index].style.display = "block";
+        })
+    })
+
+    arrowsDown.forEach(function(arrow, index){
+        arrow.addEventListener("click", function(){
+            program_modules[index].style.display = "block";
+            arrowsUp[index].style.display = "block";
+            arrowsDown[index].style.display = "none";
+        })
+    })
+</script>
