--- a/formations/gestion-de-projet.html
+++ b/formations/gestion-de-projet.html
@@ -28,7 +28,7 @@ layout: default
     </section>
     <section class="formation_links container">
         <a href="#nextDates">Prochaines dates</a>
-        <a href="mailto:valerie@a2consulting.io?subject=Formation à la gestion de projet" target="_blank">S'incrire</a>
+        <a href="mailto:valerie@a2consulting.io?subject=Inscription%20%3A%20formation%20%C3%A0%20la%20gestion%20de%20projet">S'incrire</a>
     </section>
     <section class="formation_target">
         <div class="container">
@@ -281,8 +281,8 @@ layout: default
                     </div>
                 </div>
                 <div class="formation_links container">
-                    <a href="mailto:valerie@a2consulting.io?subject=Informations : formation à la gestion de projet">Avoir plus d'informations</a>
-                    <a href="mailto:valerie@a2consulting.io?subject=Inscription : formation à la gestion de projet" target="_blank">S'incrire</a>
+                    <a href="mailto:valerie@a2consulting.io?subject=Informations : formation à la gestion de projet" target="_blank">Demander plus d'informations</a>
+                    <a href="mailto:valerie@a2consulting.io?subject=Inscription%20%3A%20formation%20%C3%A0%20la%20gestion%20de%20projet" target="_blank">S'incrire</a>
                 </div>
             </div>
         </div>
